Showcase columns spacing fix

--- a/less/app.less
+++ b/less/app.less
@@ -252,6 +252,9 @@ header {
 		justify-content: space-between;
 		.columns {
 			width: 40%;
+			.display-flex();
+			.flex-direction-column();
+			.justify-content(space-between);
 		}
 	}
 	.stack-grid {
@@ -419,7 +422,7 @@ header {
 	}
 }
 footer {
-	padding: 80px 0 120px;
+	padding: 80px 16px 120px;
 	text-align: center;
 	border-top: 2px solid @divider;
 	ul {
